--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ page-mathjax: false
 friends: [
     {
         title: "BetaCat",
-        href: "https://betacat.online/"
+        href: "https://tobyqin.cn/"
     },{
         title: "Gubo",
         href: "https://www.gubo.org/"
